# RTIOW_C

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
images/: spectrum.tga
includes/: image_tga.h  params.h  vec3.h
main/: BUILD
main/includes/: image_tga.h  params.h  progress.h  ray.h  vec3.h
main/src/: main.c  params.c  ray.c
src/: image_tga.c  main.c  progress.c  ray.c  vec3.c
